# DMAD-test

./: config.yaml  dataset.py  experiment.py  forward_process.py  fpr1.csh  fpr1.sh  fpr2.csh  fpr2.sh  fpr3.csh  fpr3.sh  fpr4.csh  fpr4.sh  loss.py  main.py  plot.ipynb  power1.csh  power1.sh  power2.csh  power2.sh  power3.csh  power3.sh  power4.csh  power4.sh  readme.md  sample.py  seed.py  si.py  train.py  unet.py
si4dnn/: .gitignore  .gitmodules  README.md  models.py  pyproject.toml
si4dnn/si4dnn/: __init__.py  layers.py  nn.py  si.py  util.py
