[tool.poetry]
name = "si4dnn"
version = "0.1.0"
description = ""
authors = ["DaikiMiwa <miwa.daiki.mllab.nit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tensorflow = "^2.14.0"
numpy = "^1.26.0"
mpmath = "^1.3.0"
scipy = "^1.11.3"
matplotlib = "^3.8.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
